--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html>
 <head>
 <title>Viclovesd - Home</title>
-<link rel="shortcut icon" href="title.ico">
+<link rel="shortcut icon" href="/assets/title.ico">
 <link rel="stylesheet" href="style.css">
 </head>
 <body style="background-color: black">
 
 <header>
-  <div class="logohead" style="background-image:url(banner2.png); height:455px;">
+  <div class="logohead" style="background-image:url(/assets/banner2.png); height:455px;">
    <p style="text-align:center;">
-    <img src="circleviclogo.png">
+    <img src="/assets/circleviclogo.png">
    </p>
   </div>
 
@@ -20,7 +20,7 @@
         <td>
          <div class="twitchbutton">
           <a href="http://www.twitch.tv/gurlsrbadatvidyagaems">
-           <img src="twitch.png" style="width:250px;height:50px;">
+           <img src="/assets/twitch.png" style="width:250px;height:50px;">
           </a>
          </div>
         </td>
@@ -28,7 +28,7 @@
         <td>
          <div class="twitterbutton">
           <a href="https://twitter.com/viclovesd">
-           <img src="twitter.png" style="float:center;display:inline;width:250px;height:50px;">
+           <img src="/assets/twitter.png" style="float:center;display:inline;width:250px;height:50px;">
           </a>
          </div>
         </td>
@@ -36,7 +36,7 @@
         <td>
          <div class="facebookbutton">
           <a href="https://www.facebook.com/biggestteets">
-           <img src="facebook.png" style="float:center;display:inline;width:250px;height:50px;">
+           <img src="/assets/facebook.png" style="float:center;display:inline;width:250px;height:50px;">
           </a>
          </div>
         </td>
@@ -44,7 +44,7 @@
         <td>
          <div class="instagrambutton">
           <a href="http://instagram.com/viclovesd">
-           <img src="instagram.png" style="float:center;display:inline;width:250px;height:50px;">
+           <img src="/assets/instagram.png" style="float:center;display:inline;width:250px;height:50px;">
           </a>
          </div>
         </td>
@@ -52,7 +52,7 @@
         <td>
          <div class="youtubebutton">
           <a href="youtube.com/c/viclovesd">
-           <img src="youtube.png" style="float:center;display:inline;width:250px;height:50px;">
+           <img src="/assets/youtube.png" style="float:center;display:inline;width:250px;height:50px;">
           </a>
          </div>
         </td>
@@ -94,13 +94,6 @@
 </script>
 
  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
- <script>
- $(document).ready(function() {
-  $('twitchbutton').click(function() {
-   $('social container').animate({left: '20px'});
-  });
- });
- </script>
  <script src="app.js"></script>
 
 </body>
