added fading feature

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -19,9 +19,9 @@
         <p>
            <img class="logo" src="/assets/circleviclogo.png"/>
           <div class="direct">
-            <img id='home' src='/assets/home.png'/>
-            <img id='sched' src='/assets/sched.png'/>
-            <img id='vod' src='/assets/vod.png'/>
+            <img class='home' src='/assets/home.png'/>
+            <img class='sched' src='/assets/sched.png'/>
+            <img class='vod' src='/assets/vod.png'/>
           </div>
          <img id='tab' src='/assets/tab.png'/>
         </p>
@@ -54,30 +54,6 @@
       </div>
   </div>
 </header>
-
-  <div class="content">
-      <div class="twitchstream">
-        <p style="text-align:center;">
-          <iframe
-            src="http://player.twitch.tv/?channel=gurlsrbadatvidyagaems"
-            height="540"
-            width="960"
-            frameborder="0"
-            scrolling="no"
-            allowfullscreen>
-          </iframe>
-
-          <iframe
-            frameborder="0"
-            scrolling="no"
-            id="chat_embed"
-            src="http://www.twitch.tv/gurlsrbadatvidyagaems/chat"
-            height="540"
-            width="300">
-          </iframe>
-        </p>
-      </div>
-  </div>
 
 <script src="//code.jquery.com/jquery.min.js"></script>
 <!-- <script src="https://ttv-api.s3.amazonaws.com/twitch.min.js"></script>
