--- a/videos/index.html
+++ b/videos/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>Viclovesd - Home</title>
+<title>Viclovesd - Videos</title>
 <link rel="shortcut icon" href="/assets/title.ico">
 <link rel="stylesheet" href="style.css">
 </head>
@@ -62,30 +62,6 @@
       </div>
   </div>
 </header>
-
-  <div class="content">
-      <div class="twitchstream">
-        <p style="text-align:center;">
-          <iframe
-            src="http://player.twitch.tv/?channel=gurlsrbadatvidyagaems"
-            height="540"
-            width="960"
-            frameborder="0"
-            scrolling="no"
-            allowfullscreen>
-          </iframe>
-
-          <iframe
-            frameborder="0"
-            scrolling="no"
-            id="chat_embed"
-            src="http://www.twitch.tv/gurlsrbadatvidyagaems/chat"
-            height="540"
-            width="300">
-          </iframe>
-        </p>
-      </div>
-  </div>
 
 <script src="//code.jquery.com/jquery.min.js"></script>
 <!-- <script src="https://ttv-api.s3.amazonaws.com/twitch.min.js"></script>
