tons of bugs in responsive design

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
             <a href="/">
              <img id='home' src='/assets/home.png'/>
             </a>
-            
-            <a href="/schedule">  
+
+            <a href="/schedule">
              <img id='sched' src='/assets/sched.png'/>
-            </a> 
-            
+            </a>
+
             <a href='/videos'>
              <img id='vod' src='/assets/vod.png'/>
-            </a> 
+            </a>
           </div>
          <img id='tab' src='/assets/tab.png'/>
         </p>
@@ -82,6 +82,19 @@
             src="http://www.twitch.tv/gurlsrbadatvidyagaems/chat"
             height="540"
             width="300">
+          </iframe>
+        </p>
+      </div>
+
+      <div class='form'>
+        <p>
+          <iframe
+            src="https://docs.google.com/forms/d/1yxvoirgsP1CUUUqw3FDnn4zvkc4usqDDk9lRc3Dd4Ug/viewform?embedded=true"
+            width="760"
+            height="500"
+            frameborder="0"
+            marginheight="0"
+            marginwidth="0">Loading...
           </iframe>
         </p>
       </div>
