--- a/schedule/index.html
+++ b/schedule/index.html
@@ -22,14 +22,14 @@
             <a href="/">
              <img id='home' src='/assets/home.png'/>
             </a>
-            
-            <a href="/schedule">  
+
+            <a href="/schedule">
              <img id='sched' src='/assets/sched.png'/>
-            </a> 
-            
+            </a>
+
             <a href='/videos'>
              <img id='vod' src='/assets/vod.png'/>
-            </a> 
+            </a>
           </div>
          <img id='tab' src='/assets/tab.png'/>
         </p>
@@ -63,9 +63,18 @@
   </div>
 </header>
 
-<div class= "calendar">
-<iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;mode=WEEK&amp;height=700&amp;wkst=1&amp;bgcolor=%2333ccff&amp;src=jeskto6korms1092o35lucoo30%40group.calendar.google.com&amp;color=%69AAB1&amp;ctz=America%2FToronto" style="border-width:0" width="1260" height="740" frameborder="0" scrolling="no"></iframe>
-</div>
+  <div class= "content">
+      <div class= "calendar">
+        <iframe
+          src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;mode=WEEK&amp;height=700&amp;wkst=1&amp;bgcolor=%2333ccff&amp;src=jeskto6korms1092o35lucoo30%40group.calendar.google.com&amp;color=%69AAB1&amp;ctz=America%2FToronto"
+          style="border-width:0"
+          width="1260"
+          height="740"
+          frameborder="0"
+          scrolling="no">
+        </iframe>
+      </div>
+  </div>
 
 <script src="//code.jquery.com/jquery.min.js"></script>
 <!-- <script src="https://ttv-api.s3.amazonaws.com/twitch.min.js"></script>
