--- a/videos/index.html
+++ b/videos/index.html
@@ -16,26 +16,22 @@
       </div>
 
       <div class="logohead">
-        <p>
          <img class="logo" src="/assets/circleviclogo.png"/>
-          <div id='direct'>
+          <div class="backgroundhead"></div>
             <a href="/">
              <img id='home' src='/assets/home.png'/>
             </a>
-            
-            <a href="/schedule">  
+
+            <a href="/schedule">
              <img id='sched' src='/assets/sched.png'/>
-            </a> 
-            
+            </a>
+
             <a href='/videos'>
              <img id='vod' src='/assets/vod.png'/>
-            </a> 
+            </a>
           </div>
          <img id='tab' src='/assets/tab.png'/>
-        </p>
       </div>
-
-      <div class="backgroundhead"></div>
 
       <div class="socialcontainer">
         <p>
@@ -62,6 +58,18 @@
       </div>
   </div>
 </header>
+
+  <div class='content'>
+    <div class='playlist'>
+     <iframe 
+       width="100%" 
+       height="709px 100%" 
+       src="https://www.youtube.com/embed/videoseries?list=PLXWm-1zKb0OznJLNZ_RGbHBfZYIJl46vL&autoplay=1"
+       frameborder="0" 
+       allowfullscreen>
+     </iframe>
+    </div> 
+  </div>
 
 <script src="//code.jquery.com/jquery.min.js"></script>
 <!-- <script src="https://ttv-api.s3.amazonaws.com/twitch.min.js"></script>
