--- a/index.html
+++ b/index.html
@@ -8,58 +8,69 @@
 <body>
 
 <header>
+  <div class="direct">
+    <p>
+      <a href="/">
+        <img class='home' id='home' src="/assets/home.png"/>
+      </a>
+
+      <a href="/">
+        <img class='home' id='home2' src="/assets/home2.png"/>
+      </a>  
+
+      <a href="/videos">
+        <img class='vod button' id='vod' src="/assets/vod.png"/>
+      </a>
+
+      <a href="/videos">
+        <img class='vod button' id='vod2' src="/assets/vod2.png"/>
+      </a>
+
+      <a href="/schedule">
+        <img class='sched button' id='sched' src="/assets/sched.png"/>
+      </a>
+
+      <a href="/schedule">
+        <img class='sched button' id='sched2' src="/assets/sched2.png"/>
+      </a>
+
+      <a href="/faq">
+        <img class='faq button' id='faq' src="/assets/faq.png"/>
+      </a>
+
+      <a href="/faq">
+        <img class='faq button' id='faq2' src="/assets/faq2.png"/>
+      </a>
+
+      <a href="/peripherals">
+        <img class='comp button' id='comp' src="/assets/comp.png"/>
+      </a>
+
+      <a href="/peripherals">
+        <img class='comp button' id='comp2' src="/assets/comp2.png"/>
+      </a>
+
+      <a href="https://discordapp.com/channels/138484635918139392/138484635918139392">
+        <img class='discord button' id='discord' src="/assets/discord.png"/>
+      </a>
+
+      <a href="https://discordapp.com/channels/138484635918139392/138484635918139392">
+        <img class='discord button' id='discord2' src="/assets/discord2.png"/>
+      </a>
+
+        <img class='social button' id='social' src="/assets/social.png"/>
+
+        <img class='social button' id='social2' src="/assets/social2.png"/>
+    </p>  
+  </div>
+
   <div class="header">
-      <div class="twitchlogin">
-       <img src="http://ttv-api.s3.amazonaws.com/assets/connect_dark.png" class="twitch-connect"
-          href='#'/>
-       <img src="/assets/logout.png" class="twitch-logout" href='#'/>
-      </div>
+    <img class='pull' src="/assets/pull.png"/>
 
-      <div class="logohead">
-        <p>
-         <img class="logo" src="/assets/circleviclogo.png"/>
-          <div id='direct'>
-            <a href="/">
-             <img id='home' src='/assets/home.png'/>
-            </a>
-
-            <a href="/schedule">
-             <img id='sched' src='/assets/sched.png'/>
-            </a>
-
-            <a href='/videos'>
-             <img id='vod' src='/assets/vod.png'/>
-            </a>
-          </div>
-         <img id='tab' src='/assets/tab.png'/>
-        </p>
-      </div>
-
+    <div class="logohead">
+      <img class="logo" src="/assets/circleviclogo.png"/>
       <div class="backgroundhead"></div>
-
-      <div class="socialcontainer">
-        <p>
-          <a href="http://www.twitch.tv/gurlsrbadatvidyagaems">
-           <img class="button" id="twitchbutton" src="/assets/twitch.png"/>
-          </a>
-
-          <a href="https://www.twitter.com/viclovesd">
-           <img class="button" id="twitterbutton" src="/assets/twitter.png"/>
-          </a>
-
-          <a href="https://www.facebook.com/biggestteets">
-           <img class="button" id="facebookbutton" src="/assets/facebook.png"/>
-          </a>
-
-          <a href="http://www.instagram.com/viclovesd">
-           <img class="button" id="instagrambutton" src="/assets/instagram.png"/>
-          </a>
-
-          <a href="http://www.youtube.com/c/viclovesd">
-           <img class="button" id="youtubebutton" src="/assets/youtube.png"/>
-          </a>
-        </p>
-      </div>
+    </div>
   </div>
 </header>
 
