--- a/specs/index.html
+++ b/specs/index.html
@@ -18,7 +18,6 @@
       <div class="logohead">
          <img class="logo" src="/assets/circleviclogo.png"/>
           <div class="backgroundhead"></div>
-           <div class='direct'>
             <a href="/">
              <img id='home' src='/assets/home.png'/>
             </a>
@@ -30,7 +29,6 @@
             <a href='/videos'>
              <img id='vod' src='/assets/vod.png'/>
             </a>
-           </div> 
           </div>
          <img id='tab' src='/assets/tab.png'/>
       </div>
@@ -62,14 +60,17 @@
 </header>
 
   <div class='content'>
-    <div class='playlist'>
-     <iframe 
-       width="100%" 
-       height="709px 100%" 
-       src="https://www.youtube.com/embed/videoseries?list=PLXWm-1zKb0OznJLNZ_RGbHBfZYIJl46vL&autoplay=1"
-       frameborder="0" 
-       allowfullscreen>
-     </iframe>
+    <div class='specs'>
+      <p>
+        Monitors: Acer 24” K242HQL <br>
+        Mouse: Razer Naga Epic Chroma <br>
+        Keyboard: Razer Blackwidow Chroma <br>
+        Headset: Astro A50 <br>
+        Webcam: Logitech C920 <br>
+        Graphics Card: Nvidia GTX 770 <br>
+        CPU: AMD FX 8350 <br>
+        RAM: Corsair Vengeance 12GB
+      </p>
     </div> 
   </div>
 
