fixed dropdown bar

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <header>
   <div class="direct">
+   <h1> 
     <p>
       <a href="/">
         <img class='home' id='home' src="/assets/home.png"/>
@@ -19,62 +20,65 @@
       </a>  
 
       <a href="/videos">
-        <img class='vod button' id='vod' src="/assets/vod.png"/>
+        <img class='vod' id='vod' src="/assets/vod.png"/>
       </a>
 
       <a href="/videos">
-        <img class='vod button' id='vod2' src="/assets/vod2.png"/>
+        <img class='vod' id='vod2' src="/assets/vod2.png"/>
       </a>
 
       <a href="/schedule">
-        <img class='sched button' id='sched' src="/assets/sched.png"/>
+        <img class='sched' id='sched' src="/assets/sched.png"/>
       </a>
 
       <a href="/schedule">
-        <img class='sched button' id='sched2' src="/assets/sched2.png"/>
+        <img class='sched' id='sched2' src="/assets/sched2.png"/>
       </a>
 
       <a href="/faq">
-        <img class='faq button' id='faq' src="/assets/faq.png"/>
+        <img class='faq' id='faq' src="/assets/faq.png"/>
       </a>
 
       <a href="/faq">
-        <img class='faq button' id='faq2' src="/assets/faq2.png"/>
+        <img class='faq' id='faq2' src="/assets/faq2.png"/>
       </a>
 
       <a href="/peripherals">
-        <img class='comp button' id='comp' src="/assets/comp.png"/>
+        <img class='comp' id='comp' src="/assets/comp.png"/>
       </a>
 
       <a href="/peripherals">
-        <img class='comp button' id='comp2' src="/assets/comp2.png"/>
+        <img class='comp' id='comp2' src="/assets/comp2.png"/>
       </a>
 
       <a href="https://discordapp.com/channels/138484635918139392/138484635918139392">
-        <img class='discord button' id='discord' src="/assets/discord.png"/>
+        <img class='discord' id='discord' src="/assets/discord.png"/>
       </a>
 
       <a href="https://discordapp.com/channels/138484635918139392/138484635918139392">
-        <img class='discord button' id='discord2' src="/assets/discord2.png"/>
+        <img class='discord' id='discord2' src="/assets/discord2.png"/>
       </a>
 
-        <img class='social button' id='social' src="/assets/social.png"/>
+        <img class='social' id='social' src="/assets/social.png"/>
 
-        <img class='social button' id='social2' src="/assets/social2.png"/>
+        <img class='social' id='social2' src="/assets/social2.png"/>
     </p>  
+   </h1>
   </div>
+
 
   <div class="header">
     <img class='pull' src="/assets/pull.png"/>
-
+  
+   <h2>  
     <div class="logohead">
-      <img class="logo" src="/assets/circleviclogo.png"/>
-      <div class="backgroundhead"></div>
+      <img class="logo down" src="/assets/circleviclogo.png"/>
     </div>
+   </h2> 
   </div>
 </header>
 
-  <div class="content">
+  <div class="content down">
       <div class="twitchstream">
         <p style="text-align:center;">
           <iframe
