--- a/index.html
+++ b/index.html
@@ -62,6 +62,46 @@
         <img class='social' id='social' src="/assets/social.png"/>
 
         <img class='social' id='social2' src="/assets/social2.png"/>
+
+      <a href="http://twitch.tv/gurlsrbadatvidyagaems">
+        <img class='twitch' id='twitch' src="/assets/twitch.png"/>
+      </a>
+
+      <a href="http://twitch.tv/gurlsrbadatvidyagaems">
+        <img class='twitch' id='twitch2' src="/assets/twitch2.png"/>
+      </a>
+
+      <a href="https://twitter.com/viclovesd">
+        <img class='twitter' id='twitter' src="/assets/twitter.png"/>
+      </a>
+
+      <a href="https://twitter.com/viclovesd">
+        <img class='twitter' id='twitter2' src="/assets/twitter2.png"/>
+      </a>
+
+      <a href="http://instagram.com/viclovesd">
+        <img class='instagram' id='instagram' src="/assets/instagram.png"/>
+      </a>
+
+      <a href="http://instagram.com/viclovesd">
+        <img class='instagram' id='instagram2' src="/assets/instagram2.png"/>
+      </a>
+
+      <a href="https://www.facebook.com/biggestteets">
+        <img class='facebook' id='facebook' src="/assets/facebook.png"/>
+      </a>
+
+      <a href="https://www.facebook.com/biggestteets">
+        <img class='facebook' id='facebook2' src="/assets/facebook2.png"/>
+      </a>
+
+      <a href="https://www.youtube.com/user/viclovesd">
+        <img class='youtube' id='youtube' src="/assets/youtube.png"/>
+      </a>
+
+      <a href="https://www.youtube.com/user/viclovesd">
+        <img class='youtube' id='youtube2' src="/assets/youtube2.png"/>
+      </a>
     </p>  
    </h1>
   </div>
@@ -116,9 +156,6 @@
   </div>
 
 <script src="//code.jquery.com/jquery.min.js"></script>
-<!-- <script src="https://ttv-api.s3.amazonaws.com/twitch.min.js"></script>
- --><!-- <script src="/twitch-js-sdk-master/twitch.min.js"></script> -->
-<script src="/twitch-js-sdk-master/twitch.js"></script>
 <script id="dsq-count-scr" src="//viclovesd.disqus.com/count.js" async></script>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
